5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3998/executions/1671_1872.log
== TEST (2019-04-26 20:21:44) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor x: "))
y = float(input("valor y: "))

if(x == 0) e (y == 0):
	print("Origem")
elif(x>0) and (y>0):
	print("Q1")
elif(x<0)and(y>0):
	print("Q2")
elif(x<0)and(y<0):
	print("Q3")
else:
	print("Q4")
-- ERROR:
File "XXXX", line 5
    if(x == 0) e (y == 0):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 20:21:57) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor x: "))
y = float(input("valor y: "))

if(x == 0) and (y == 0):
	print("Origem")
elif(x>0) and (y>0):
	print("Q1")
elif(x<0)and(y>0):
	print("Q2")
elif(x<0)and(y<0):
	print("Q3")
else:
	print("Q4")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 20:22:10) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor x: "))
y = float(input("valor y: "))

if(x == 0) and (y == 0):
	print("Origem")
elif(x>0) and (y>0):
	print("Q1")
elif(x<0)and(y>0):
	print("Q2")
elif(x<0)and(y<0):
	print("Q3")
else:
	print("Q4")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 20:26:12) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor x: "))
y = float(input("valor y: "))

if(x == 0) and (y == 0):
	print("Origem")
elif(x>0) and (y>0):
	print("Q1")
elif(x<0)and(y>0):
	print("Q2")
elif(x<0)and(y<0):
	print("Q3")
elif(x>0)and(y<0):
	print("Q4")
elif(x=0)and(y>0):
	print("Eixo X")
elif(x=0)and(y<0):
	print("Eixo X")
elif(x>0)and(y=0):
	print("Eixo y")
elif(x<0)and(y=0):
	print("Eixo X")
-- ERROR:
File "XXXX", line 15
    elif(x=0)and(y>0):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 20:26:38) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor x: "))
y = float(input("valor y: "))

if(x == 0) and (y == 0):
	print("Origem")
elif(x>0) and (y>0):
	print("Q1")
elif(x<0)and(y>0):
	print("Q2")
elif(x<0)and(y<0):
	print("Q3")
elif(x>0)and(y<0):
	print("Q4")
elif(x=0)and(y>0):
	print("Eixo X")
elif(x=0)and(y<0):
	print("Eixo X")
elif(x>0)and(y=0):
	print("Eixo y")
elese:
	print("Eixo X")
-- ERROR:
File "XXXX", line 15
    elif(x=0)and(y>0):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 20:27:27) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor x: "))
y = float(input("valor y: "))

if(x == 0) and (y == 0):
	print("Origem")
elif(x>0) and (y>0):
	print("Q1")
elif(x<0)and(y>0):
	print("Q2")
elif(x<0)and(y<0):
	print("Q3")
elif(x>0)and(y<0):
	print("Q4")
elif(x=0)and(y<0):
	print("Eixo X")
elif(x>0)and(y=0):
	print("Eixo y")
elese:
	print("Eixo X")
-- ERROR:
File "XXXX", line 15
    elif(x=0)and(y<0):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 20:31:58) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor x: "))
y = float(input("valor y: "))

if(x == 0) and (y == 0):
	print("Origem")
elif(x>0) and (y>0):
	print("Q1")
elif(x<0)and(y>0):
	print("Q2")
elif(x<0)and(y<0):
	print("Q3")
elif(x>0)and(y<0):
	print("Q4")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 20:33:49) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor x: "))
y = float(input("valor y: "))

if(x == 0) and (y == 0):
	print("Origem")
elif(x=0) and(y<0):
	print("Eixo X")
elif(x>0) and (y>0):
	print("Q1")
elif(x<0)and(y>0):
	print("Q2")
elif(x<0)and(y<0):
	print("Q3")
elif(x>0)and(y<0):
	print("Q4")
-- ERROR:
File "XXXX", line 7
    elif(x=0) and(y<0):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 17:05:35) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor x: "))
y = float(input("valor y: "))

if(x == 0) and (y == 0):
	print("Origem")
elif(x>0) and (y>0):
	print("Q1")
elif(x<0)and(y>0):
	print("Q2")
elif(x<0)and(y<0):
	print("Q3")
elif(x>0)and(y<0):
	print("Q4")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 17:06:13) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor x: "))
y = float(input("valor y: "))

if(x == 0) and (y == 0):
	print("Origem")
elif(x>0) and (y>0):
	print("Q1")
elif(x<0)and(y>0):
	print("Q2")
elif(x<0)and(y<0):
	print("Q3")
elif(x>0)and(y<0):
	print("Q4")
-- EXECUTION TIME:
0.160654
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:

-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 21:09:02) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor x: "))
y = float(input("valor y: "))

if(x == 0) and (y == 0):
	print("Origem")
elif x > 0:
	if y > 0:
		print("Q1")
	elif y < 0:
		print("Q4")
	else:
		print("Eixo X")
elif(x<0):
	if y >0:
		print("Q2")
	elif y <0:
		print("Q3")
	else:
		print("Eixo Y")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 21:09:34) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor x: "))
y = float(input("valor y: "))

if(x == 0) and (y == 0):
	print("Origem")
elif x > 0:
	if y > 0:
		print("Q1")
	elif y < 0:
		print("Q4")
	else:
		print("Eixo X")
elif(x<0):
	if y >0:
		print("Q2")
	elif y <0:
		print("Q3")
	else:
		print("Eixo Y")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 21:09:45) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor x: "))
y = float(input("valor y: "))

if(x == 0) and (y == 0):
	print("Origem")
elif x > 0:
	if y > 0:
		print("Q1")
	elif y < 0:
		print("Q4")
	else:
		print("Eixo X")
elif(x<0):
	if y >0:
		print("Q2")
	elif y <0:
		print("Q3")
	else:
		print("Eixo Y")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 21:09:56) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor x: "))
y = float(input("valor y: "))

if(x == 0) and (y == 0):
	print("Origem")
elif x > 0:
	if y > 0:
		print("Q1")
	elif y < 0:
		print("Q4")
	else:
		print("Eixo X")
elif(x<0):
	if y >0:
		print("Q2")
	elif y <0:
		print("Q3")
	else:
		print("Eixo Y")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 21:10:05) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor x: "))
y = float(input("valor y: "))

if(x == 0) and (y == 0):
	print("Origem")
elif x > 0:
	if y > 0:
		print("Q1")
	elif y < 0:
		print("Q4")
	else:
		print("Eixo X")
elif(x<0):
	if y >0:
		print("Q2")
	elif y <0:
		print("Q3")
	else:
		print("Eixo Y")
-- EXECUTION TIME:
0.209588
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo X
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 21:12:33) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor x: "))
y = float(input("valor y: "))

if(x == 0) and (y == 0):
	print("Origem")
elif x > 0:
	if y > 0:
		print("Q1")
	elif y < 0:
		print("Q4")
	else:
		print("Eixo X")
elif(x<0):
	if y <0:
		print("Q2")
	elif y <0:
		print("Q3")
	else:
		print("Eixo Y")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
